--- a/app/src/main/res/layout/activity_new_donation.xml
+++ b/app/src/main/res/layout/activity_new_donation.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".New_donation"
+    android:background="@color/lightgrey"
     android:orientation="vertical"
-    android:background="@color/lightgrey">
+    tools:context=".New_donation">
+
     <LinearLayout
         android:id="@+id/relativeLayout4"
         android:layout_width="match_parent"
@@ -28,10 +29,10 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="70dp"
             android:fontFamily="@font/poppins_reg"
             android:text="Food Details"
-            android:layout_marginStart="70dp"
-            android:layout_gravity="center_vertical"
             android:textColor="#FF9843"
             android:textSize="23dp"
             android:textStyle="bold" />
@@ -49,56 +50,69 @@
 
         <EditText
             android:id="@+id/itemName"
-            android:layout_width="match_parent"
+            android:layout_width="340dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/dmsans_reg"
+            android:gravity="center"
             android:hint="Item Name"
             android:inputType="text"
-            android:paddingLeft="20dp"
-            android:singleLine="true"
-            android:textSize="16sp" />
+            android:paddingHorizontal="20dp"
+            android:textColorHint="#2F2F2F"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/timeOfPreparation"
-            android:layout_width="match_parent"
+            android:layout_width="340dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/dmsans_reg"
+            android:gravity="center"
             android:hint="Time of Preparation"
-            android:inputType="datetime"
-            android:paddingLeft="20dp"
-            android:singleLine="true"
-            android:textSize="16sp" />
+            android:inputType="text"
+            android:paddingHorizontal="20dp"
+            android:textColorHint="#2F2F2F"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/quantity"
-            android:layout_width="match_parent"
+            android:layout_width="340dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/dmsans_reg"
+            android:gravity="center"
             android:hint="Quantity"
-            android:inputType="number"
-            android:paddingLeft="20dp"
-            android:singleLine="true"
-            android:textSize="16sp" />
+            android:inputType="text"
+            android:paddingHorizontal="20dp"
+            android:textColorHint="#2F2F2F"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:gravity="top|left"
+            android:layout_width="340dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/dmsans_reg"
+            android:gravity="center"
             android:hint="Address"
             android:inputType="textMultiLine"
             android:lines="2"
             android:overScrollMode="always"
-            android:paddingLeft="20dp"
+            android:paddingHorizontal="20dp"
             android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
             android:scrollHorizontally="false"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColorHint="#2F2F2F"
+            android:textSize="15sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -124,43 +138,83 @@
         android:id="@+id/linearLayout10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
         tools:ignore="MissingConstraints">
 
         <RadioGroup
+            android:id="@+id/required"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/required">
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/yes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="Yes" />
+            <RadioButton
+                android:id="@+id/yes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="Yes" />
 
-        <RadioButton
-            android:id="@+id/no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No" />
+            <RadioButton
+                android:id="@+id/no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No" />
         </RadioGroup>
 
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fonttop"
+            android:text="Add Photo:"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout18"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:id="@+id/add_photo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/roundstyle"
+            android:text="+"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            tools:ignore="MissingConstraints" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout18"
+        tools:ignore="MissingConstraints">
 
         <Button
             android:id="@+id/submit_new_donation"
@@ -173,10 +227,8 @@
             android:text="Submit"
             android:textAllCaps="false"
             android:textSize="14sp"
-
             tools:ignore="MissingConstraints" />
     </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
