--- a/app/src/main/res/layout/activity_your_donations.xml
+++ b/app/src/main/res/layout/activity_your_donations.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,43 +7,71 @@
     android:background="@color/lightgrey"
     tools:context=".Your_donations">
 
-    <ImageButton
-        android:id="@+id/front_page_back_button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toLeftOf="@id/profileButton"
-        android:background="@color/lightgrey"
-        android:src="@drawable/backingicon" />
 
-
-    <TextView
-        android:id="@+id/DonationList"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout15"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="Your Donations"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        />
-    <ImageView
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:id="@+id/front_page_back_button"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:background="@android:color/transparent"
+            android:drawableStart="@drawable/ic_circle" />
+
+        <TextView
+            android:id="@+id/DonationList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="50dp"
+            android:fontFamily="@font/poppins_reg"
+            android:text="Your Donations"
+            android:textColor="#FF9843"
+            android:textSize="23dp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/profileicon"
-        android:background="@color/iconBackground"
-        android:id="@+id/profileButton"
-        android:layout_centerHorizontal="true"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/yourdonationsRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/DonationList"
-        tools:listitem="@layout/your_donation_item_layout"/>
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout15"
+        tools:ignore="MissingConstraints">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/profileButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:background="@color/iconBackground"
+            android:padding="10dp"
+            android:src="@drawable/profileicon" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
+        tools:ignore="MissingConstraints">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/yourdonationsRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/DonationList"
+            tools:listitem="@layout/your_donation_item_layout"/>
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
