--- a/app/src/main/res/layout/activity_restaurant_front_page.xml
+++ b/app/src/main/res/layout/activity_restaurant_front_page.xml
@@ -6,94 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".RestaurantFrontPage"
     android:orientation="vertical"
-    android:background="@drawable/bg_dashboard">
+    >
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:orientation="horizontal"-->
+
+<!--        tools:ignore="MissingConstraints"-->
+<!--        tools:layout_editor_absoluteX="0dp"-->
+<!--        tools:layout_editor_absoluteY="-2dp">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:fontFamily="@font/poppins_reg"-->
+<!--            android:text="@string/dashboard"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
+<!--    </LinearLayout>-->
+
+    <FrameLayout
+        android:id="@+id/flFragment"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/poppins_reg"
-            android:text="@string/dashboard"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:ignore="MissingConstraints">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/dashboard_image" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:ignore="MissingConstraints">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/poppins_reg"
-            android:text="Hi, Coffee Madness"
-            android:textColor="@color/darkgrey"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/poppins_reg"
-            android:text="Want to share food?"
-            android:textColor="@color/darkgrey"
-            android:textSize="20sp"
-            android:textStyle="normal" />
-        <Button
-            android:id="@+id/make_a_donation_button"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:text="Donate"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/poppins_reg"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/roundstyle"/>
-        <Button
-            android:id="@+id/your_donations_button"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:text="Your Donations"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/poppins_reg"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/roundstyle"/>
-
-
-    </LinearLayout>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="15dp" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout2"
@@ -102,54 +46,59 @@
         android:background="@drawable/iconbarlow"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center">
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:gravity="center">-->
 
-            <!-- Home Button -->
-            <Button
-                android:id="@+id/homebtn"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="40dp"
-                android:background="@drawable/ic_home"
-                android:textColor="#ffffff"
-                android:textSize="12sp" />
+<!--            &lt;!&ndash; Home Button &ndash;&gt;-->
+<!--            <Button-->
+<!--                android:id="@+id/homebtn"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:layout_marginEnd="40dp"-->
+<!--                android:background="@drawable/ic_home"-->
+<!--                android:textColor="#ffffff"-->
+<!--                android:textSize="12sp" />-->
 
-            <!-- Donation Button -->
-            <Button
-                android:id="@+id/donation_list_button"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
-                android:background="@drawable/ic_donation"
-                android:textColor="#ffffff"
-                android:textSize="12sp" />
+<!--            &lt;!&ndash; Donation Button &ndash;&gt;-->
+<!--            <Button-->
+<!--                android:id="@+id/donation_list_button"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:layout_marginStart="40dp"-->
+<!--                android:layout_marginEnd="40dp"-->
+<!--                android:background="@drawable/ic_donation"-->
+<!--                android:textColor="#ffffff"-->
+<!--                android:textSize="12sp" />-->
 
-            <!-- Profile Button -->
-            <Button
-                android:id="@+id/profileButton"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
-                android:background="@drawable/ic_profile"
-                android:textColor="#ffffff"
-                android:textSize="12sp" />
+<!--            &lt;!&ndash; Profile Button &ndash;&gt;-->
+<!--            <Button-->
+<!--                android:id="@+id/profileButton"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:layout_marginStart="40dp"-->
+<!--                android:layout_marginEnd="40dp"-->
+<!--                android:background="@drawable/ic_profile"-->
+<!--                android:textColor="#ffffff"-->
+<!--                android:textSize="12sp" />-->
 
-            <!-- Settings Button -->
-            <Button
-                android:id="@+id/iconButton"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="40dp"
-                android:background="@drawable/ic_setting"
-                android:textColor="#ffffff"
-                android:textSize="12sp" />
-        </LinearLayout>
+<!--            &lt;!&ndash; Settings Button &ndash;&gt;-->
+<!--            <Button-->
+<!--                android:id="@+id/iconButton"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:layout_marginStart="40dp"-->
+<!--                android:background="@drawable/ic_setting"-->
+<!--                android:textColor="#ffffff"-->
+<!--                android:textSize="12sp" />-->
+<!--        </LinearLayout>-->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            app:menu="@menu/bottom_nav_menu"/>
     </RelativeLayout>
 
 
