--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.HealthShapers" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Base.Theme.HealthShapers" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/buttonColor</item>
     </style>
 
     <style name="Theme.HealthShapers" parent="Base.Theme.HealthShapers" />
