--- a/app/src/main/res/layout/activity_new_donation.xml
+++ b/app/src/main/res/layout/activity_new_donation.xml
@@ -58,6 +58,7 @@
             android:fontFamily="@font/dmsans_reg"
             android:gravity="center"
             android:hint="Item Name"
+
             android:inputType="text"
             android:paddingHorizontal="20dp"
             android:textColorHint="#2F2F2F"
@@ -194,17 +195,43 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
         tools:ignore="MissingConstraints">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <Button
+        android:id="@+id/add_photo"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/roundstyle"
+        android:text="+"
+        android:textAllCaps="false"
+        android:textSize="14sp"
+        tools:ignore="MissingConstraints" />
+    <!-- ImageView to display selected photo -->
+    <ImageView
+        android:id="@+id/photoImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/rounded_shape"
+        android:contentDescription="Selected photo"
+        android:src="@drawable/pizza"
+        android:visibility="visible"
+         />
+    <Button
+        android:id="@+id/upload_photo"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/roundstyle"
+        android:text="Upload"
+        android:textAllCaps="false"
+        android:textSize="14sp"
+        tools:ignore="MissingConstraints" />
+</LinearLayout>
 
-        <Button
-            android:id="@+id/add_photo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/roundstyle"
-            android:text="+"
-            android:textAllCaps="false"
-            android:textSize="14sp"
-            tools:ignore="MissingConstraints" />
     </LinearLayout>
 
     <LinearLayout
@@ -212,7 +239,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout18"
         tools:ignore="MissingConstraints">
 
