--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -7,7 +7,8 @@
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    android:clickable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -31,7 +32,7 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:id="@+id/image"
+                            android:id="@+id/ADimage"
                             android:src="@drawable/pizza"
                             android:layout_gravity="center_vertical"
                            />
