--- a/app/src/main/res/layout/activity_confirm_requests.xml
+++ b/app/src/main/res/layout/activity_confirm_requests.xml
@@ -37,18 +37,19 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/Confirm_Donation"
         android:layout_width="380dp"
-        android:layout_height="420dp"
+        android:layout_height="380dp"
         android:layout_below="@id/DonationList"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="@color/cardviewGrey"
         app:cardCornerRadius="25dp">
 
+
         <LinearLayout
+            android:padding="20dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/cardviewGrey">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,16 +59,15 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/profilepic"
+                    android:src="@drawable/redcrosspfp"
                     android:layout_gravity="center_vertical"
                     />
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/cardviewGrey"
                 android:orientation="vertical">
 
                 <TextView
@@ -85,7 +85,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="50dp"
                     android:fontFamily="@font/fonttop"
-                    android:text="Quantity:15"
+                    android:text="Quantity: 15"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
@@ -95,7 +95,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/fonttop"
-                    android:text="Location -  Banilad"
+                    android:text="Location: Banilad"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
@@ -105,35 +105,28 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/fonttop"
-                    android:text="Pickup before - 2:30pm"
+                    android:text="Pickup before: 2:30pm"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
-                <EditText
-                    android:id="@+id/Description_Donation"
-                    android:layout_width="350dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:background="@color/lightgrey"
-                    android:gravity="top|left"
-                    android:hint="Description:"
-                    android:inputType="textMultiLine"
-                    android:lines="4"
-                    android:overScrollMode="always"
-                    android:paddingLeft="5dp"
-                    android:scrollbarStyle="insideInset"
-                    android:scrollbars="vertical"
-                    android:scrollHorizontally="false"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/fonttop"
+                    android:text="Description: Description of the package"
                     android:textColor="@color/black"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textSize="15sp" />
+
+
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <Button
         android:id="@+id/confirm_donation_button"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="230dp"
         android:layout_below="@+id/Confirm_Donation"
@@ -142,22 +135,6 @@
         android:paddingLeft="44dp"
         android:paddingRight="44dp"
         android:background="@drawable/turquoise_button"/>
-    <FrameLayout
-        android:id="@+id/iconButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
-        >
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/profileicon"
-            android:background="@color/iconBackground"
-            />
-    </FrameLayout>
+
 
 </RelativeLayout>
