--- a/app/src/main/res/layout/activity_ngo_front_page.xml
+++ b/app/src/main/res/layout/activity_ngo_front_page.xml
@@ -1,72 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RestaurantFrontPage"
-    android:orientation="vertical">
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/fonttop"
-        android:textColor="@color/black"
-        android:text="Welcom Back Thagam Foundatin"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal">
-        <ImageView
-            android:layout_width="246dp"
-            android:layout_height="326dp"
-            android:src="@drawable/restaurantcroppedimage"/>
-    </androidx.cardview.widget.CardView>
-    <Button
-        android:id="@+id/make_a_donation_button"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:text="@string/make_don"
-        android:layout_gravity="center_horizontal"
-        android:textSize="14sp"
-        android:layout_marginTop="40dp"
-        android:textAllCaps="false"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:background="@drawable/custom_button_background"/>
-
-    <Button
-        android:id="@+id/donation_hist_button"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/custom_button_background"
-        android:paddingLeft="44dp"
-        android:paddingRight="44dp"
-        android:text="Donation History"
-        android:textAllCaps="false"
-        android:textSize="14sp" />
-
+    tools:context=".NgoFrontPage"
+    android:orientation="vertical"
+    >
     <FrameLayout
-        android:id="@+id/iconButton"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="320dp"
-        android:layout_marginTop="30dp"
-        >
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/profileicon"
-            android:background="@color/iconBackground"
-            />
-    </FrameLayout>
-</LinearLayout>
+        android:id="@+id/flFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="15dp" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@drawable/iconbarlow"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            app:menu="@menu/bottom_nav_menu"/>
+    </RelativeLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
