--- a/app/src/main/res/layout/activity_your_donations.xml
+++ b/app/src/main/res/layout/activity_your_donations.xml
@@ -17,13 +17,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
-        <Button
+        <ImageButton
             android:id="@+id/front_page_back_button"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="15dp"
             android:background="@android:color/transparent"
-            android:drawableStart="@drawable/ic_circle" />
+            android:src="@drawable/ic_circle" />
 
         <TextView
             android:id="@+id/DonationList"
@@ -40,24 +40,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="15dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout15"
-        tools:ignore="MissingConstraints">
 
-        <ImageView
-            android:id="@+id/profileButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:background="@color/iconBackground"
-            android:padding="10dp"
-            android:src="@drawable/profileicon" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
