--- a/app/src/main/res/layout/fragment_dashboard_ngo.xml
+++ b/app/src/main/res/layout/fragment_dashboard_ngo.xml
@@ -33,23 +33,12 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            android:fillViewport="true"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:layout_constraintBottom_toBottomOf="parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:orientation="horizontal"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:ignore="MissingConstraints">
 
@@ -64,6 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="200dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
             tools:ignore="MissingConstraints">
 
@@ -72,46 +63,46 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/poppins_reg"
-                android:text="Hi, Coffee Madness"
+                android:text="Hi, Thagam Foundation"
                 android:textColor="@color/darkgrey"
                 android:textSize="30sp"
                 android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/poppins_reg"
-                android:text="Want to share food?"
+                android:text="Need food?"
                 android:textColor="@color/darkgrey"
                 android:textSize="20sp"
                 android:textStyle="normal" />
-            <Button
-                android:id="@+id/make_a_donation_button"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:text="Donate"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/poppins_reg"
-                android:textSize="20sp"
-                android:layout_marginTop="20dp"
-                android:textAllCaps="false"
-                android:textColor="#FFFFFF"
-                android:background="@drawable/roundstyle"/>
-            <Button
-                android:id="@+id/your_donations_button"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:text="Your Donations"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/poppins_reg"
-                android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                android:textAllCaps="false"
-                android:textColor="#FFFFFF"
-                android:background="@drawable/roundstyle"/>
+            <!--            <Button-->
+            <!--                android:id="@+id/make_a_donation_button"-->
+            <!--                android:layout_width="250dp"-->
+            <!--                android:layout_height="50dp"-->
+            <!--                android:text="Donate"-->
+            <!--                android:layout_gravity="center_horizontal"-->
+            <!--                android:fontFamily="@font/poppins_reg"-->
+            <!--                android:textSize="20sp"-->
+            <!--                android:layout_marginTop="20dp"-->
+            <!--                android:textAllCaps="false"-->
+            <!--                android:textColor="#FFFFFF"-->
+            <!--                android:background="@drawable/roundstyle"/>-->
+            <!--            <Button-->
+            <!--                android:id="@+id/your_donations_button"-->
+            <!--                android:layout_width="250dp"-->
+            <!--                android:layout_height="50dp"-->
+            <!--                android:text="Your Donations"-->
+            <!--                android:layout_gravity="center_horizontal"-->
+            <!--                android:fontFamily="@font/poppins_reg"-->
+            <!--                android:textSize="20sp"-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:textAllCaps="false"-->
+            <!--                android:textColor="#FFFFFF"-->
+            <!--                android:background="@drawable/roundstyle"/>-->
+
 
         </LinearLayout>
-        </LinearLayout>
-        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
