--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -14,33 +14,33 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_gravity="center_horizontal"
-                    android:id="@+id/roundedpfp"
-                    android:layout_centerHorizontal="true"
-                    tools:ignore="MissingConstraints"
-                    android:padding="8dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-                        <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:id="@+id/ADimage"
-                            android:src="@drawable/pizza"
-                            android:layout_gravity="center_vertical"
-                           />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/roundedpfp"
+                android:layout_centerHorizontal="true"
+                tools:ignore="MissingConstraints"
+                android:padding="8dp"
+                android:adjustViewBounds="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:id="@+id/ADimage"
+                    android:src="@drawable/pizza"
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="centerCrop" />
+            </androidx.cardview.widget.CardView>
 
 
-                <LinearLayout
+
+            <LinearLayout
                     android:layout_width="280dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
