--- a/app/src/main/res/layout/your_donation_item_layout.xml
+++ b/app/src/main/res/layout/your_donation_item_layout.xml
@@ -26,6 +26,7 @@
                     android:layout_height="80dp"
                     android:src="@drawable/profilepic"
                     android:layout_gravity="center_vertical"
+                    android:scaleType="centerCrop"
                     />
             </androidx.cardview.widget.CardView>
 
